# aethersense

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
include/: Math3D.h  RenderEngine.h  ThreadSafeBuffer.h  WifiScanner.h  gl_loader.h
src/: cli_main.cpp  main.cpp
src/core/: WifiScanner.cpp
src/visualization/: RenderEngine.cpp
web/: package-lock.json  package.json  server.js
web/public/: app.js  blog.html  index.html  style.css
